# fastapi-minio-project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py  upload_file.py
app/data/: database.py  db_config.py  dependencies.py  minio_config.py
app/frontend/templates/: generated_link.html  home.html  layout.html  navbar.html  register.html
app/models/: models.py
app/routers/: auth.py  files.py
tests/: dependencies.py  minio_config_test.py  test_files.py  test_minio.py  test_users.py
